err/xiami.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/example'...
Compiling './lib/python3.5/site-packages/example/xiamiConsole.py'...
***   File "./lib/python3.5/site-packages/example/xiamiConsole.py", line 10
    print '---------- Welcome to use xiamiMusic Download Tool ----------'
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/example/xiamiGUI.py'...
***   File "./lib/python3.5/site-packages/example/xiamiGUI.py", line 81
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/example/xiamiGuiZn.py'...
***   File "./lib/python3.5/site-packages/example/xiamiGuiZn.py", line 83
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xiami'...
Compiling './lib/python3.5/site-packages/xiami/__init__.py'...
***   File "./lib/python3.5/site-packages/xiami/__init__.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xiami/xiamiHttp.py'...
***   File "./lib/python3.5/site-packages/xiami/xiamiHttp.py", line 43
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xiami/xiamiParse.py'...
***   File "./lib/python3.5/site-packages/xiami/xiamiParse.py", line 103
    print XiamiParser.get_song_info(d)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xiami-0.0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
